chore: update changelog
update changelog

Log: update changelog
Influence: 无
Task: https://pms.uniontech.com/task-view-140999.html
Change-Id: Ib7c7e87fb774ae2fbae076aa15d546e3f043b622

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-linuxdeepin-go-dbus-factory (2.0.0.0) unstable; urgency=low
+
+  * release 2.0.0.0
+
+ --  <fanpengcheng@uniontech.com>  Tue, 14 June 2022 17:08:13 +0800
+
 golang-github-linuxdeepin-go-dbus-factory (1.0.0-1) unstable; urgency=low
 
   * Auto Version update.
