--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-linuxdeepin-go-dbus-factory (1.10.21) unstable; urgency=low
+
+  * Version update.
+
+ -- lichangze <lichangze@uniontech.com>  Sat, 27 Aug 2022 01:40:10 +0000
+
 golang-github-linuxdeepin-go-dbus-factory (1.0.0-1) unstable; urgency=low
 
   * Auto Version update.
