chore: update changlog
update changlog

Log: update changlog
Influence: 构建
Change-Id: I525b9704df48bcbbe497e7a403283963844205fd

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-linuxdeepin-go-dbus-factory (1.10.23) unstable; urgency=low
+
+  * Version update.
+
+ -- lichangze <lichangze@uniontech.com>  Fri, 2 Sep 2022 01:40:10 +0000
+
 golang-github-linuxdeepin-go-dbus-factory (1.10.21) unstable; urgency=low
 
   * Version update.
