--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+golang-github-linuxdeepin-go-dbus-factory (2.0.2) unstable; urgency=medium
+
+  [ TagBuilder ]
+  * feat: 增加原子更新封装(Influence: 增加原子更新封装)
+  * feat: 接口更变，增加V23接口(Task: 207483)(Influence: 接口更变)
+  * fix: Backlight的PATH错误修复(Task: 225039)(Influence: 无)
+
+ -- zhaoyingzhen <zhaoyingzhen@uniontech.com>  Tue, 13 Dec 2022 19:31:21 +0800
+
 golang-github-linuxdeepin-go-dbus-factory (2.0.1) unstable; urgency=medium
 
   [ TagBuilder ]
