--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-linuxdeepin-go-dbus-factory (2.0.5) unstable; urgency=medium
+
+  * support show bluetooth battery
+
+ -- chenhongtao <chenhongtao@deepin.org>  Fri, 11 Aug 2023 10:22:59 +0800
+
 golang-github-linuxdeepin-go-dbus-factory (2.0.3) unstable; urgency=medium
 
   [ TagBuilder ]
