--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-linuxdeepin-go-dbus-factory (2.0.15) unstable; urgency=medium
+
+  * feat: 增加fido接口 (#132)
+
+ -- fuleyi <fuleyi@uniontech.com>  Wed, 30 Jul 2025 11:41:44 +0800
+
 golang-github-linuxdeepin-go-dbus-factory (2.0.14) unstable; urgency=medium
 
   * feat: update ConfigManager D-Bus interface
