--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-linuxdeepin-go-dbus-factory (2.0.21) unstable; urgency=medium
+
+  * chore: remove deprecated apps modules
+
+ -- fuleyi <fuleyi@uniontech.com>  Thu, 16 Oct 2025 16:55:03 +0800
+
 golang-github-linuxdeepin-go-dbus-factory (2.0.20) unstable; urgency=medium
 
   * chore: remove deprecated fprintd1 service files
