--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-linuxdeepin-go-dbus-factory (2.0.22) unstable; urgency=medium
+
+  * Release 2.0.22
+
+ -- zhangkun <zhangkun2@uniontech.com>  Thu, 16 Oct 2025 20:58:45 +0800
+
 golang-github-linuxdeepin-go-dbus-factory (2.0.21) unstable; urgency=medium
 
   * chore: remove deprecated apps modules
