--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-linuxdeepin-go-dbus-factory (2.0.24) unstable; urgency=medium
+
+  * feat: add DeviceList property to touchpad interface
+
+ -- zhangkun <zhangkun2@uniontech.com>  Wed, 07 Jan 2026 14:05:37 +0800
+
 golang-github-linuxdeepin-go-dbus-factory (2.0.23) unstable; urgency=medium
 
   * chore: remove deprecated cursor helper D-Bus interfaces
