--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+golang-github-linuxdeepin-go-dbus-factory (2.0.25) unstable; urgency=medium
+
+  * feat: add window maximize and unmaximize methods
+
+ -- zhangkun <zhangkun2@uniontech.com>  Thu, 05 Feb 2026 19:22:19 +0800
+
 golang-github-linuxdeepin-go-dbus-factory (2.0.24) unstable; urgency=medium
 
   * feat: add DeviceList property to touchpad interface
